Fix z-index header

--- a/src/style-sheets/style-landing.css
+++ b/src/style-sheets/style-landing.css
@@ -21,6 +21,7 @@ body {
     position: fixed;
     width: 100%;
     height: 7vh;
+    z-index: 100;
 }
 
 .header .title-header p {
